--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -1,4 +1,7 @@
 .section-grid{
     display: grid;
-    grid-template-columns: 25%;
+    grid-template-columns: 33% 33%;
+}
+.section-grid-item{
+    text-align: center;
 }
