--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,53 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} */
+
+/* Form Styles */
+form{
+  margin: auto;
+  border: 1px solid rgb(0,0,0,.1);
+  padding: 30px;
+  border-radius: 5px;
+  max-width: 300px;
+  box-shadow: 1px 1px 1px #999;
 }
+
+.text{
+  border: .5px solid #333;
+  width: 100%;
+  height: 30px;
+  border-radius: 2px;
+  padding: 5px 5px 0 5px;
+  margin-bottom: 10px;
+  }
+
+  label{
+    display: block;
+    text-align: left;
+  }
+
+  form > button.btn{
+    width: 100%;
+  }
+
+  form > textarea{
+    height: 300px;
+  }
+/* End Form Styles */
+
+
+/* Classes */
+.btn{
+  background: black;
+  padding: 7px 7px 5px;
+  color: white;
+  border:none;
+  border-radius: 3px;
+}
+/* End Classes */
+
+
