--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   display: grid;
   grid-template-columns: 100%;
   /* This will result on two rows, each one of 300px */
-  grid-template-rows: 300px 300px;
+  /* grid-template-rows: 300px 300px; */
 }
 
 .main-single-project-square {
