--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,37 @@ ul.bars {
 }
 /* End Main/Landing Styles */
 
+/* SideBar Styles */
+.account-panel{
+  color: white;
+  background: black;
+  border-radius: 5px;
+  padding: 20px 10px;
+  margin-bottom: 20px;
+}
+
+.account-panel > h4{
+margin-bottom: 3px;
+}
+
+.tip{
+  color: white;
+  border: 1px solid white;
+  border-radius: 7px;
+  padding: 0 10px 15px 15px;
+}
+
+.tip > h4{
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+
+.tip > small{
+  display: block;
+  margin-bottom: 10px;
+}
+/* End SideBar Styles */
+
 /* Single Project Styles */
 
 /* End Single Project */
