--- a/src/index.css
+++ b/src/index.css
@@ -81,22 +81,39 @@ ul.bars {
 
 .main-single-project-square {
   text-shadow: 0.25px 0.25px 0.25px #fff;
-  color: crimson;
+  color: white;
   background: #000;
   border: 1px solid white;
   margin: 15px 15px 15px 0;
-  padding: 0 15px 15px;
+  padding: 10px 20px 15px;
   border-radius: 8px;
   box-shadow: 1.5px 1.5px 1.5px #999;
   position: relative;
 }
 
-.main-single-project-square > header > h4 {
+.main-single-project-square > header > h2 {
+  text-shadow: 0.25px 0.25px 0.25px #fff;
   margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+
+.main-single-project-square > article > h3 {
+  margin-bottom: 7px;
+  padding-left: 5px;
 }
 
 .main-single-project-square > article > p {
   color: white;
+  font-style: italic;
+  margin-top: 0;
+  margin-bottom: 25px;
+  padding-left: 5px;
+}
+
+.single-project-content-separator{
+  border-bottom:.5px solid red;
+  border-top: .5px solid red;
 }
 
 .bid-btn {
@@ -111,8 +128,8 @@ ul.bars {
   height: 35px;
 }
 .closed {
-  max-height: 150px;
-  min-height: 140px;
+  max-height: 138px;
+  min-height: 100px;
 }
 
 .open {
