--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,57 @@ ul.bars {
 }
 /* End of mbl styles */
 
+/* Landing Page Styles */
+#landing_banner {
+  background: url("https://i.imgur.com/ebyutog.jpg");
+  height: 250px;
+  background-position: middle;
+  background-color: #cccccc;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding: 30px;
+}
+
+.overlay { 
+  position: absolute;
+  justify-content: center;
+  /*vertical-align: middle; */
+  text-align: center;
+  /* display: none; */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background-color: rgba(253, 5, 5, 0.7); */
+  z-index: 2;
+  cursor: pointer;
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(253, 5, 5, 0.9),
+    rgba(0, 0, 0, 0.9)
+  );
+}
+
+.overlay > article > h1 {
+  color: white;
+  
+  margin: auto;
+}
+
+.overlay > article > p {
+  max-width: 85%;
+  margin: auto;
+  max-width: 65%;
+}
+.overlay > article {
+  margin-top: 70px;
+}
+
+/* End Landing Page Styles */
+
 /* Main/Landing Style */
 .sidebar {
   background: red;
@@ -111,9 +162,9 @@ ul.bars {
   padding-left: 5px;
 }
 
-.single-project-content-separator{
-  border-bottom:.5px solid red;
-  border-top: .5px solid red;
+.single-project-content-separator {
+  border-bottom: 0.5px solid red;
+  border-top: 0.5px solid red;
 }
 
 .bid-btn {
@@ -300,6 +351,15 @@ form > textarea {
 
 /* Media Queries */
 @media (min-width: 678px) {
+  #landing_banner {
+    background: url("https://i.imgur.com/ebyutog.jpg");
+    padding: 30px 0;
+    background-position: bottom;
+    background-color: #cccccc;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   .filter-grid {
     display: grid;
     grid-template-columns: 100%;
