--- a/src/index.css
+++ b/src/index.css
@@ -159,13 +159,13 @@ ul.bars {
 
 .landing-content-grid-item > form > .form-top {
   height: 80px;
-  width: 100%;
+  /* width: 100%; */
   margin-bottom: 30px;
   background: linear-gradient(
     to right,
-    rgba(253, 5, 5, 0.25),
-    rgba(0, 0, 0, 0.25),
-    rgba(0, 0, 0, 0.25)
+    rgba(253, 5, 5, 0.75),
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
   );
   display: flex;
   justify-content: center;
@@ -176,6 +176,14 @@ ul.bars {
   max-width: 500px;
 }
 
+.form-top{
+  background: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 0.45),
+    rgba(253, 5, 5, 0.75)
+  );
+  padding: 30px;
+}
 .form-top > p {
   align-self: center;
   color: white;
@@ -447,6 +455,26 @@ form {
   box-shadow: 1px 1px 1px #999;
 }
 
+#contact-form > div > .text , #login-form > div > .text, #new-project-form > div > .text{
+  margin-left: 0px;
+}
+
+#contact-form > .form-top, #login-form > .form-top, #new-project-form > .form-top{
+  margin-bottom: 30px;
+}
+
+#contact-form > button.btn, #login-form > button.btn, #new-project-form > button.btn{
+  margin-left: 0;
+}
+
+#contact-form, #login-form, #new-project-form {
+  margin-bottom: 45px;
+  padding-bottom: 30px;
+}
+
+#login-form {
+
+}
 .text {
   border: 0.5px solid #333;
   width: 70%;
@@ -461,7 +489,7 @@ form {
 }
 
 label {
-  display: block;
+  display: none;
   padding-left: 30px;
 }
 
