--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,16 @@ body {
 }
 
 .nav-menu {
-  padding-top: 9px;
+  padding-top: 18px;
   padding-left: 0;
 }
 
+#logo > h1 > span > .thumbsUp {
+  font-size: 20px;
+  border: 2px solid white;
+  padding: 2px;
+  border-radius: 5px;
+}
 ul.bars {
   padding-right: 0;
   margin-right: 0;
@@ -304,7 +310,13 @@ ul.bars {
 .main-single-project-square {
   text-shadow: 0.25px 0.25px 0.25px #fff;
   color: white;
-  background: #000;
+  background: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.9),
+    rgba(253, 5, 5, 0.9)
+  );
   border: 1px solid white;
   margin: 15px 15px 15px 0;
   padding: 10px 20px 15px;
@@ -342,16 +354,22 @@ ul.bars {
   background: black;
   color: white;
   border: 1px solid white;
-  border-radius: 15%;
-  padding: 5px;
+  border-radius: 5px;
+  padding: 10px 5px 7px 10px;
   bottom: -20px;
   position: absolute;
   width: auto;
-  height: 35px;
+  height: auto;
   font-weight: 800;
   text-transform: uppercase;
   text-shadow: 1px 1px 1px red;
   box-shadow: 1px 1px 1px #999;
+}
+
+.thumbsUp {
+  /* font-size: 10px; */
+  margin-right: 5px;
+  color: white;
 }
 .closed {
   max-height: 138px;
