Updating bidding form styles and main page filters

--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -1,6 +1,6 @@
 .section-grid{
     display: grid;
-    grid-template-columns: 33% 33%;
+    grid-template-columns: auto auto auto;
 }
 .section-grid-item{
     text-align: center;
