--- a/src/index.css
+++ b/src/index.css
@@ -355,7 +355,7 @@ ul.bars {
   color: white;
   border: 1px solid white;
   border-radius: 5px;
-  padding: 10px 5px 7px 10px;
+  padding: 4px 0px 3px 6px;
   bottom: -20px;
   position: absolute;
   width: auto;
@@ -441,20 +441,24 @@ ul.bars {
   padding: 30px;
 }
 
+#project-page-bidders {
+  padding: 35px 35px 35px 0;
+}
+
 #project-page-bidders > ul {
   list-style: none;
 }
 
-#project-page-bidders > ul > li > button.btn{
+#project-page-bidders > ul > li > button.btn {
   margin: 0 5px 10px;
   text-align: center;
   border: 2px solid white;
   box-shadow: 1px 1px 1px #999;
   font-weight: 600;
   text-transform: uppercase;
-  padding-left:17px;
+  padding-left: 17px;
   font-size: 14px;
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 /* End Project Page Styles */
@@ -472,11 +476,11 @@ ul.bars {
 
 .account-panel > h4 {
   margin-bottom: 3px;
-  -webkit-text-stroke-width: .0001px;
+  -webkit-text-stroke-width: 0.0001px;
   -webkit-text-stroke-color: red;
 }
 
-.account-panel > .bids-text{
+.account-panel > .bids-text {
   -webkit-text-stroke-color: limegreen;
   margin-bottom: -8px;
 }
@@ -590,6 +594,70 @@ form > textarea {
 }
 /* End Form Styles */
 
+/* Bidding Styles */
+#bidder-form {
+  border-radius: 7px;
+  max-width: 397px;
+  padding: 10px 30px 30px;
+  box-shadow: 2px 2px 2px #999;
+  background: black;
+  color: white;
+  margin-top: 50px;
+  margin-left: 30px;
+  border: 1px solid white;
+}
+
+#bidder-form > div > h3 {
+  margin: -17px 0 10px;
+  text-shadow: 1px 1px 1px red;
+  font-style: italic;
+  max-width: 145px;
+  padding: 7px 0;
+  background: red;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid white;
+}
+
+#bidder-input > .bidder-input-grid > div > label {
+  display: block;
+  padding-left: 0;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+#bidder-input > .bidder-input-grid > div {
+  padding: 15px 10px 15px 0;
+  text-align: left;
+}
+
+#bidder-input {
+  margin: 20px 0 25px;
+  padding: 20px 15px 10px 15px;
+  border-bottom: 2px solid red;
+}
+
+#bidder-input:last-child {
+  border-bottom: 0;
+}
+.bidder-btn {
+  border: 1px solid white;
+  border-radius: 5px;
+  background: green;
+  padding: 8px 8px 6px 7px;
+  color: white;
+  display: block;
+  width: 50%;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.bidder-input-grid {
+  display: grid;
+  grid-template-columns: 100%;
+}
+/* End Bidding Styles */
+
 /* Classes */
 .btn {
   background: black;
@@ -618,11 +686,11 @@ form > textarea {
   display: none !important;
 }
 
-.green-text{
-  color: limegreen
+.green-text {
+  color: limegreen;
 }
 
-.red-text{
+.red-text {
   color: red;
 }
 /* End Classes */
@@ -710,6 +778,10 @@ form > textarea {
     display: block;
   }
 
+  .nav-menu > li > a {
+    padding-top: 5px;
+    padding-bottom: 3px;
+  }
   .top-nav > .nav-grid > .nav-grid-item-2 > .nav-nav {
     display: block;
   }
@@ -730,7 +802,7 @@ form > textarea {
     );
     padding: 30px;
     display: inline-block;
-    height: 100%;
+    min-height: 600px;
   }
 
   #mbl-nav {
