--- a/src/index.css
+++ b/src/index.css
@@ -451,7 +451,7 @@ ul.bars {
 
 #project-page-bidders > ul {
   list-style: none;
-  padding-left: 15px;
+  padding-left: 5px;
 }
 
 #project-page-bidders > ul > li > h3 {
@@ -711,7 +711,7 @@ form > textarea {
 
 #comments_text {
   border: 0.5px solid #333;
-    height: 30px;
+    height: 100px;
     border-radius: 2px;
     padding: 5px 5px 0 5px;
     margin-bottom: 10px;
@@ -746,13 +746,13 @@ form > textarea {
   margin-bottom: 50px;
 }
 
-.comments-header > h3 {
-  margin: 15px 0;
+.comments-header > h2 {
+  padding: 15px 0;
 }
 
 .comments-header-grid {
-  display: grid;
-  grid-template-columns: 50% 50%;
+  /* display: grid;
+  grid-template-columns: 50% 50%; */
 }
 
 #project_comments {
