Updated Comments style

--- a/src/index.css
+++ b/src/index.css
@@ -456,12 +456,18 @@ ul.bars {
 
 #project-page-bidders > ul > li > h3 {
   display: inline;
-    background: linear-gradient( to bottom right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9), rgba(253, 5, 5, 0.9) );
-    color: white;
-    padding: 10px 15px;
-    border-radius: 5px;
-    border: 1px solid white;
-    box-shadow: 1px 1px 1px #999;
+  background: linear-gradient(
+    to bottom right,
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.9),
+    rgba(253, 5, 5, 0.9)
+  );
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  border: 1px solid white;
+  box-shadow: 1px 1px 1px #999;
 }
 
 #project-page-bidders > ul > li > button.btn {
@@ -707,16 +713,17 @@ form > textarea {
   padding-left: 20px;
   border: 1px solid white;
   box-shadow: 1px 1px 1px #999;
+  border-radius: 7px;
 }
 
 #comments_text {
   border: 0.5px solid #333;
-    height: 100px;
-    border-radius: 2px;
-    padding: 5px 5px 0 5px;
-    margin-bottom: 10px;
-    width: 100%;
-    margin-left: 0;
+  height: 100px;
+  border-radius: 2px;
+  padding: 5px 5px 0 5px;
+  margin-bottom: 10px;
+  width: 100%;
+  margin-left: 0;
 }
 
 .form-body {
@@ -724,10 +731,10 @@ form > textarea {
 }
 
 #comments-section {
-  margin-top: 90px;
+  margin-top: 45px;
 }
 
-#comments-section > div > #comments-form{
+#comments-section > div > #comments-form {
   box-shadow: none;
   border: none;
 }
@@ -743,10 +750,10 @@ form > textarea {
   color: white;
   padding-left: 15px;
   box-shadow: 1px 1px 1px #999;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
-.comments-header > h2 {
+.comments-header > .comments-header-grid > h2 {
   padding: 15px 0;
 }
 
