--- a/src/index.css
+++ b/src/index.css
@@ -454,10 +454,10 @@ ul.bars {
   padding-left: 5px;
 }
 
-#project-page-bidders > div > hr{
+#project-page-bidders > hr {
   max-width: 600px;
-    border: .5px solid red;
-    margin-left: 0px;
+  border: .75px solid red;
+  margin-left: 0px;
 }
 
 #project-page-bidders > ul > li > h3 {
@@ -738,7 +738,7 @@ form > textarea {
 
 #comments-section {
   margin-top: 45px;
-  margin-bottom: 55px;
+  margin-bottom: 35px;
 }
 
 #comments-section > div > #comments-form {
@@ -816,6 +816,9 @@ form > textarea {
 .project-comment > hr {
   border-width: 0.35px;
   border-color: darkred;
+  max-width: 600px;
+  border: 0.5px solid darkred;
+  margin-left: 0px;
 }
 /* End Project Comments */
 
