--- a/src/index.css
+++ b/src/index.css
@@ -456,24 +456,17 @@ ul.bars {
 
 #project-page-bidders > hr {
   max-width: 600px;
-  border: .75px solid red;
+  border: 0.75px solid red;
   margin-left: 0px;
 }
 
 #project-page-bidders > ul > li > h3 {
   display: inline;
-  background: linear-gradient(
-    to bottom right,
-    rgba(0, 0, 0, 0.9),
-    rgba(0, 0, 0, 0.9),
-    rgba(0, 0, 0, 0.9),
-    rgba(253, 5, 5, 0.9)
-  );
-  color: white;
-  padding: 10px 15px;
+  color: black;
+  padding: 0 5px;
   border-radius: 5px;
-  border: 1px solid white;
-  box-shadow: 1px 1px 1px #999;
+  text-shadow: 1px 1px 1px darkred;
+  font-size: 24px;
 }
 
 #project-page-bidders > ul > li > button.btn {
@@ -821,6 +814,12 @@ form > textarea {
   margin-left: 0px;
 }
 /* End Project Comments */
+
+/* Collab Styles */
+#collab_section{
+  margin-bottom: 90px;
+}
+/* End Collab Styles */
 
 /* Classes */
 .btn {
