--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@ ul.bars {
   text-align: center;
   font-size: 30px;
   margin: -10px 0 5px 0;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 5px;
   box-shadow: 2px 2px 2px #333;
   background: black;
