--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,13 @@ body {
   min-width: 320px;
 }
 /* Logo */
-#footer > article > #logo > h1 {
+#footer > article > #logo-footer > h1 {
   padding: 0;
   margin: 0;
   font-size: 20px;
 }
 
-#footer > article > #logo > h1 > span {
+#footer > article > #logo-footer > h1 > span, #footer > article > span {
   color: red;
 }
 
@@ -302,7 +302,7 @@ ul.bars {
   display: block;
   margin: 0 auto 30px;
   width: 100%;
-  max-width: 400px;
+  max-width: 350px;
 }
 
 #stats {
@@ -424,11 +424,12 @@ ul.bars {
   position: relative;
 }
 
-.main-single-project-square > header > h2 {
-  text-shadow: 0.25px 0.25px 0.25px #fff;
+.main-single-project-square > header > h2 > a.project-page-link {
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 5px;
+  color: white;
+  text-decoration-color: red;
 }
 
 .main-single-project-square > article > h3 {
@@ -905,9 +906,9 @@ form > textarea {
 }
 
 .project-comment > p {
-  font-size: 20px;
-  text-shadow: 1px 1px 1px #666;
+  font-size: 16px;
   padding: 0 5px;
+  line-height: 1.75;
 }
 
 .project-comment > small {
@@ -1098,7 +1099,7 @@ form > textarea {
     width: auto;
   }
 
-  .main-single-project-square > header > h2 {
+  .main-single-project-square > header > h2, .main-single-project-square > article > h3 {
     font-size: 16px;
   }
 
